adding node_modules to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Ignore node_modules directory
+node_modules/
+
+# Ignore .DS_Store files (macOS)
+.DS_Store/
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
